fix: top align speaker cards

--- a/blocks/event-speakers/event-speakers.css
+++ b/blocks/event-speakers/event-speakers.css
@@ -35,13 +35,10 @@
   flex: 0 0 250px;
   position: relative;
   transition: transform 0.3s ease;
+  align-self: flex-start;
 }
 
 /* Odd cards (1, 3, 5...) - Large, portrait aspect ratio */
-.event-speakers .speaker-card:nth-child(odd) {
-  margin-top: 0;
-}
-
 .event-speakers .speaker-card:nth-child(odd) img {
   width: 250px;
   height: 314px;
@@ -50,11 +47,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-/* Even cards (2, 4, 6...) - Small, square, raised up */
-.event-speakers .speaker-card:nth-child(even) {
-  margin-top: -60px;
-}
-
+/* Even cards (2, 4, 6...) - Small, square */
 .event-speakers .speaker-card:nth-child(even) img {
   width: 250px;
   height: 250px;
@@ -153,10 +146,6 @@
     height: 276px;
   }
 
-  .event-speakers .speaker-card:nth-child(even) {
-    margin-top: -50px;
-  }
-
   .event-speakers .speaker-card:nth-child(even) img {
     width: 220px;
     height: 220px;
@@ -183,10 +172,6 @@
   .event-speakers .speaker-card:nth-child(odd) img {
     width: 200px;
     height: 251px;
-  }
-
-  .event-speakers .speaker-card:nth-child(even) {
-    margin-top: -40px;
   }
 
   .event-speakers .speaker-card:nth-child(even) img {
@@ -216,10 +201,6 @@
   .event-speakers .speaker-card:nth-child(odd) img {
     width: 180px;
     height: 226px;
-  }
-
-  .event-speakers .speaker-card:nth-child(even) {
-    margin-top: -30px;
   }
 
   .event-speakers .speaker-card:nth-child(even) img {
